--- a/src/app/categories/categories.component.scss
+++ b/src/app/categories/categories.component.scss
@@ -31,7 +31,7 @@ h1 {
 .three,
 .five,
 .seven{
-    width: 48%;
+    // width: 48%;
     height: auto;
     align-content: center;
 }
@@ -41,7 +41,7 @@ h1 {
 .six,
 .eight,
 .nine{
-    width: 25%;
+    // width: 25%;
     height: auto;
     position: relative;
     overflow: hidden;
