--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,5 +2,4 @@
 
 <app-profile></app-profile>
 <app-navigation></app-navigation>
-
-<img class="cover-img" src="../../assets/images/IMAGE_01.png" alt="image_01">
+<img class="cover-img" src="../../assets/images/IMAGE_01.jpg" alt="image_01">
