--- a/src/app/header/profile/profile.component.html
+++ b/src/app/header/profile/profile.component.html
@@ -1,21 +1,22 @@
 <div class="top">
     <div class="left">
         <button class="burger-menu">
-            <img src="../../../assets/icons/burger-menu (1).png" alt="burger-menu">
+            <img src="" alt="burger-menu">
         </button>
-        <a href="#"><img src="../../../assets/icons/smartphone.png" alt="smartphone"> <span>Contact Us</span></a>
+        <a href="#" appHover><img src="../../../assets/icons/smartphone.png" alt="smartphone"> <span>Contact Us</span></a>
         <a href="#">
-            <img src="../../assets/icons/search-interface-symbol.png" alt="search">
+            <img src="www.flaticon.com/free-icons/search-bar" alt="search">
             <input type="search" name="#" id="#" placeholder="Search">
         </a>
     </div>
-
-    <img src="../../../assets/icons/Untitled-1 copyy.png" alt="logo">
+    <a href="#">
+        <img src="../../../assets/icons/Untitled-1 copy.png" alt="logo">
+    </a>
 
     <div class="right">
-        <a href="#" class="my-account">
+        <a href="#" class="my-account" appHover>
             <img src="../../assets/icons/user.png" alt="user">
-            <span>My Account</span>
+            <span >My Account</span>
         </a>
         <a href="#">
             <img src="../../assets/icons/heart.png" alt="heart">
