--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -5,11 +5,13 @@
 </div>
 <div class="flex-container">
     <div class="flex-item one">
-        <img src="../../assets/images/210916110236-how-to-clean-jewelry-lead.jpg" alt="how-to" class="service-img">
+        <img src="../../assets/images/howToCleanJewelryLead.jpg" alt="how to" class="service-img">
+        
         <div class="overlay">
             <span>Cleaning</span>
         </div>
     </div>
+
     <div class="flex-item two">
         <img src="../../assets/images/istockphoto-160961325-612x612.jpg" alt="Repair" class="service-img">
         <div class="overlay">
@@ -18,7 +20,7 @@
 
     </div>
     <div class="flex-item three">
-        <img src="../../assets/images/Appraising-Ring-.png" alt="diamond-check" class="service-img">
+        <img src="../assets/images/Appraising-Ring-.png" alt="diamond-check" class="service-img">
         <div class="overlay">
             <span>Diamond Check</span>
         </div>
