--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
 
-<!-- <app-header></app-header>
+ <app-header></app-header>
 <app-services></app-services>
-<app-categories></app-categories>
-<app-quality></app-quality>
-<app-gift></app-gift>
-<app-gallery></app-gallery>
-<app-prices></app-prices>
-<app-footer></app-footer> -->
-
-<app-practise></app-practise>
+<!-- <app-categories></app-categories> -->
+<!-- <app-quality></app-quality> -->
+<!-- <app-gift></app-gift> -->
+<!-- <app-gallery></app-gallery> -->
+<!-- <app-prices></app-prices> -->
+<!-- <app-footer></app-footer>  -->
