--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
- <app-header></app-header>
+ <!-- <app-header></app-header> -->
 <app-services></app-services>
-<!-- <app-categories></app-categories> -->
+<app-categories></app-categories>
 <!-- <app-quality></app-quality> -->
 <!-- <app-gift></app-gift> -->
 <!-- <app-gallery></app-gallery> -->
