--- a/src/app/header/navigation/navigation.component.html
+++ b/src/app/header/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div class="navigation">
     <div class="left-nav">
-        <a href="#" class="nav-link" appHover (mouseover)="showJewelryModal()"
+        <a href="#" class="nav-link" appHover (mouseenter)="showJewelryModal()"
             (mouseleave)="closeJewelryModal()">JEWELRY</a>
 
         <a href="#" class="nav-link" appHover (mouseenter)="showWatchModal()"
