--- a/src/app/categories/categories.component.scss
+++ b/src/app/categories/categories.component.scss
@@ -20,46 +20,55 @@ h1 {
 
 .flex-container {
     width: 90%;
-    max-width: 1500px;
+    // max-width: 1500px;
     margin-inline: auto;
 
     display: flex;
     flex-wrap: wrap;
     gap: .5em;
+    background-size: cover;
 }
 
 .three,
 .five,
-.seven{
-    // width: 48%;
+.seven {
+    width: 48%;
     height: auto;
-    align-content: center;
 }
+
 .one,
 .two,
 .four,
 .six,
 .eight,
-.nine{
-    // width: 25%;
+.nine {
+    width: 25%;
     height: auto;
     position: relative;
     overflow: hidden;
 }
+
 .flex-container img {
-    width: auto;
-    height: 40vh;
-    object-fit:contain;
-    // display: block;
+    width: 100%;
+    height: 400px;
+    object-fit: contain;
+    border: 1px solid red;
+
 }
-.one img{
+
+.one img {
     rotate: -55deg;
     padding-top: 10px;
 }
-.flex-container button{
+
+.nine {
+
     border: none;
-    border-radius:6px;
+    border-radius: 6px;
     color: white;
     background-color: var(--hover-red);
-    font-size: 4rem;
+    font-size: 5rem;
+    text-decoration: none;
+    // cursor: pointer;
+    // align-self: center;
 }
