some style changes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,4 +2,6 @@
 
 <app-profile></app-profile>
 <app-navigation></app-navigation>
-<img class="cover-img" src="../../assets/images/IMAGE_01.jpg" alt="image_01">
+<div class="container">
+    <img class="cover-img" src="../../assets/images/IMAGE_01.jpg" alt="image_01">
+</div>
