--- a/src/app/header/navigation/navigation.component.html
+++ b/src/app/header/navigation/navigation.component.html
@@ -1,9 +1,9 @@
 <div class="navigation">
     <div class="left-nav">
-        <a href="#" class="nav-link" appHover (mouseenter)="showJewelryModal()"
-            (mouseleave)="closeJewelryModal()">JEWELRY</a>
+        <a href="#" class="nav-link one" appHover (mouseenter)="showJewelryModal()"
+            >JEWELRY</a>
 
-        <a href="#" class="nav-link" appHover (mouseenter)="showWatchModal()"
+        <a href="#" class="nav-link two" appHover (mouseenter)="showWatchModal()"
             (mouseleave)="closeWatchModal()">WATCHES</a>
 
         <a href="#" class="nav-link" appHover (mouseenter)="showCoinModal()" (mouseleave)="closeCoinModal()">COINS</a>
