--- a/src/app/header/profile/profile.component.html
+++ b/src/app/header/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="top">
+<div class="container">
     <div class="left">
         <button class="burger-menu">
             <img src="" alt="burger-menu">
@@ -9,8 +9,8 @@
             <input type="search" name="#" id="#" placeholder="Search">
         </a>
     </div>
-    <a href="#">
-        <img src="../../../assets/icons/Untitled-1 copy.png" alt="logo">
+    <a href="#" class="logo-img">
+        <img  src="../../../assets/icons/Untitled-1 copy.png" alt="logo">
     </a>
 
     <div class="right">
