--- a/src/app/quality/quality.component.scss
+++ b/src/app/quality/quality.component.scss
@@ -20,6 +20,7 @@ h1 {
 
 .main-container {
     width: 90%;
+    max-width: 1440px;
     margin-inline: auto;
     display: flex;
     flex-wrap: wrap;
