--- a/src/app/categories/categories.component.scss
+++ b/src/app/categories/categories.component.scss
@@ -20,7 +20,7 @@ h1 {
 
 .flex-container {
     width: 90%;
-    // max-width: 1500px;
+    max-width: 1440px;
     margin-inline: auto;
 
     display: flex;
@@ -52,7 +52,7 @@ h1 {
     width: 100%;
     height: 400px;
     object-fit: contain;
-    border: 1px solid red;
+    border: 1px solid rgb(242, 235, 235);
 
 }
 
@@ -69,6 +69,8 @@ h1 {
     background-color: var(--hover-red);
     font-size: 5rem;
     text-decoration: none;
+    padding-top: 100px;
+    padding-left: 100px;
     // cursor: pointer;
     // align-self: center;
 }
