--- a/src/app/gift/gift.component.scss
+++ b/src/app/gift/gift.component.scss
@@ -19,7 +19,8 @@ h1 {
 }
 
 .main-container {
-    width: 65%;
+    width: 90%;
+    max-width: 1440px;
     margin-inline: auto;
     display: flex;
     flex-wrap: wrap;
@@ -28,6 +29,7 @@ h1 {
 
 [alt=gift] {
     width: 300px;
+    margin-left: 400px;
 }
 
 [alt=right] {
@@ -36,13 +38,15 @@ h1 {
 
 .profile-photo {
     width: 50%;
-    float: right;
-    padding-left: 100px;
+    height: auto;
+
+    // float: right;
+    // padding-left: 100px;
 }
 
 .text {
     width: 50%;
-    padding: 50px;
+    padding: 50px 465px 0 0;
 
 }
 
