--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,30 +5,17 @@ hr {
 
 
 }
-
-.header-container {
+.container{
     width: 100%;
-    height: auto;
-    // min-width: 1000px;
-    font-size: 27px;
-
-    display: flex;
-    flex-wrap: wrap;
-    flex-shrink: 0;
-    flex-grow: 0;
-    flex-basis: 100%;
-    // align-items: center;
-    // justify-content: space-evenly;
-    // border: 1px solid black;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 
-.cover-img {
-    width: 100%;
-    // max-width: 1500px;
-   
-    height: 50vw;
-    object-fit: cover;
-    box-shadow: 1 1 3 10px black;
-    margin-top: 15px;
+[alt=image_01]{
+
+    width: inherit;
+    max-width: 1440px;
+    margin-top: 10px;
 }
