--- a/src/app/header/profile/profile.component.scss
+++ b/src/app/header/profile/profile.component.scss
@@ -1,6 +1,6 @@
-.top {
+.container {
     width: 90%;
-    max-width: 1500px;
+    max-width: 1440px;
     margin-inline: auto;
     display: flex;
     justify-content: space-between;
@@ -16,12 +16,6 @@
 }
 
 // ---------logo 
-
-
-[alt=logo] {
-    // width: 15%;
-
-}
 
 
 
