--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,12 +19,12 @@
 }
 .modal {
     width: 100%;
-    max-width: 1500px;
+    max-width: 1150px;
     display: flex;
 
     // gap: 20px;
     position: absolute;
-    left: 10%;
+    // left: 10%;
     background-color: rgba(255, 255, 255, .8);
     // background-color: rgb(228, 140, 140);    
 
