minor css changes

--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -28,6 +28,8 @@
     <div class="flex-item eight"><a href="#"><img src="../../assets/images/30sp-watches-new-inyt-superJumbo.jpg"
                 alt="watch"></a></div>
 
-    <a href="#" class="flex-item nine">SHOP NOW</a>
+    <div class="flex-item nine">
+        <a href="#">SHOP NOW</a>
+    </div>
 
 </div>
