--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -21,10 +21,12 @@ h1 {
 
 .flex-container {
     width: 90%;
-    max-width: 1500px;
+    max-width: 1440px;
     margin-inline: auto;
 
     display: flex;
+    justify-content: center;
+    // align-items: center;
     flex-wrap: wrap;
     gap: .5em;
 }
