--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -29,7 +29,7 @@
                 alt="watch"></a></div>
 
     <div class="flex-item nine">
-        <a href="#">SHOP NOW</a>
+        <a href="#">SHOP <br> NOW</a>
     </div>
 
 </div>
