--- a/src/app/categories/categories.component.scss
+++ b/src/app/categories/categories.component.scss
@@ -18,52 +18,54 @@ h1 {
     border-top: 1px solid black;
 }
 
+
 .flex-container {
     width: 90%;
     max-width: 1440px;
     margin-inline: auto;
+
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    gap: 15px;
-
-    border: 1px solid red;
-}
-
-.one,
-.two,
-.four,
-.six,
-.eight,
-.nine {
-    width: 25vw;
-    height: 300px;
-
-
+    // align-items: center;
+    flex-wrap: wrap;
+    gap: .5em;
 }
 
 .three,
 .five,
 .seven {
-    width: 37vw;
-    height: 300px;
+    width: 45%;
+    height: 250px;
+    position: relative;
+    overflow: hidden;
 }
 
 .flex-container img {
     width: 100%;
     height: 100%;
-    object-fit: scale-down;
-    overflow: hidden;
-    border: 1px solid gray;
+    object-fit:contain;
+    border: .5px solid gray;
 }
 
+
+.two,
+.one,
+.four,
+.six,
+.eight,
+.nine {
+    width: 25%;
+    height: 250px;
+    position: relative;
+    overflow: hidden;
+
+}
 .nine {
     background-color: red;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 80px;
+    font-size: 40px;
 }
 
 .nine a {
