quality component code refactoring

--- a/src/app/quality/quality.component.html
+++ b/src/app/quality/quality.component.html
@@ -10,9 +10,9 @@
     </div>
     <div class="text">
         <p>Avtandil Mazniashvili - Jewelry Expert</p>
-        <p>Meticulously examines every detail, enmiring exquisite pieces that reflect your refined taste.</p>
+        <p>Meticulously examines every detail, enmiring <br> exquisite pieces that reflect your refined taste.</p> 
         <img src="../../assets/icons/diamond11.png" alt="diamond">
-        <p>Elevate your elegance with our exquisite Jewelry pieces, each accompanied by a Meticulously detailed <span>Guarantee Certificate</span></p>
+        <p>Elevate your elegance with our exquisite Jewelry pieces, each accompanied by a  Meticulously detailed <span>Guarantee Certificate</span></p>
         <a href="#">Read More <img src="../../assets/icons/right.png" alt="right"></a>
     </div>
 </div>
