gift component refactoring

--- a/src/app/gift/gift.component.html
+++ b/src/app/gift/gift.component.html
@@ -9,7 +9,7 @@
         <img src="../../assets/images/509x348_gift_wrapping.jpg.webp" alt="gift">
     </div>
     <div class="text">
-        <p>Discover the art of gifting with jewelry that captures the immense of celebrating and love </p>
+        <p>Discover the art of gifting with <br> jewelry that captures the <br> immense of celebrating and love </p>
         <a href="#">Read More<img src="../../assets/icons/right.png" alt="right"></a>
     </div>
 </div>
