--- a/src/app/gift/gift.component.scss
+++ b/src/app/gift/gift.component.scss
@@ -28,8 +28,8 @@ h1 {
 }
 
 [alt=gift] {
-    width: 300px;
-    margin-left: 400px;
+    width: 30vw;
+    margin-left: 15vw;
 }
 
 [alt=right] {
@@ -39,14 +39,14 @@ h1 {
 .profile-photo {
     width: 50%;
     height: auto;
-
-    // float: right;
-    // padding-left: 100px;
 }
 
 .text {
     width: 50%;
-    padding: 50px 465px 0 0;
+    font-size: 1.8vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
 }
 
@@ -54,6 +54,6 @@ h1 {
     float: right;
     text-decoration: none;
     color: black;
-    font-size: 1.2rem;
-    margin-top: 30px;
+    font-size: 1.8vw;
+    margin: 50px 0 0 230px;
 }
