--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,16 +18,14 @@
     font-style: normal;
 }
 .modal {
-    width: 100%;
-    max-width: 1150px;
+    width: 90%;
+    max-width: 1440px;
     display: flex;
 
-    // gap: 20px;
     position: absolute;
-    // left: 10%;
+    left: 5%;
     background-color: rgba(255, 255, 255, .8);
-    // background-color: rgb(228, 140, 140);    
-
+font-size: 1vw;
 
 
     // border: 1px solid red;
