--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -3,6 +3,6 @@
     <h1>GALLERY</h1>
     <div class="line2"></div>
 </div>
-<div class="wrapper">
-    
+<div class="container">
+    <app-carousel [slides]="slides"></app-carousel>
 </div>
