--- a/src/app/gift/gift.component.html
+++ b/src/app/gift/gift.component.html
@@ -10,6 +10,6 @@
     </div>
     <div class="text">
         <p>Discover the art of gifting with <br> jewelry that captures the <br> immense of celebrating and love </p>
-        <a href="#">Read More<img src="../../assets/icons/right.png" alt="right"></a>
+        <a href="#">Read More <span>&#8594;</span></a>
     </div>
 </div>
