--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -18,7 +18,19 @@ h1 {
     border-top: 1px solid black;
 }
 
-.wrapper {
+.container {
     width: 90%;
+    height: 200px;
     max-width: 1440px;
+
+    // display: block;
+    // height: 500px;
+    // width: 500px;
+    // padding: 2em;
+
+    background-color: yellowgreen;
+}
+.container * img{
+    width: 200px;
+    height: 200px;
 }
