--- a/src/app/quality/quality.component.html
+++ b/src/app/quality/quality.component.html
@@ -13,6 +13,6 @@
         <p>Meticulously examines every detail, enmiring <br> exquisite pieces that reflect your refined taste.</p> 
         <img src="../../assets/icons/diamond11.png" alt="diamond">
         <p>Elevate your elegance with our exquisite Jewelry pieces, each accompanied by a  Meticulously detailed <span>Guarantee Certificate</span></p>
-        <a href="#">Read More <img src="../../assets/icons/right.png" alt="right"></a>
+        <a href="#">Read More <span>&#8594;</span></a>
     </div>
 </div>
