add price component

--- a/src/app/prices/prices.component.html
+++ b/src/app/prices/prices.component.html
@@ -1,1 +1,42 @@
-<p>prices works!</p>
+<div class="top-container">
+    <div class="line1"></div>
+    <h1>PRICES</h1>
+    <div class="line2"></div>
+</div>
+<div class="main-container">
+    <div class="gold">
+        <div class="top">
+            <img src="../../assets/icons/gold-bar.png" alt="gold-bar">
+            <span>2.746.34 ₾</span>
+        </div>
+        <div class="bottom">
+
+            <span>$</span>
+            <span>&</span>
+            <span>%</span>
+        </div>
+    </div>
+    <div class="silver">
+        <div class="top">
+            <img src="../../assets/icons/silver.png" alt="gold-bar">
+            <span>2.746.34 ₾</span>
+        </div>
+        <div class="bottom">
+
+            <span>$</span>
+            <span>&</span>
+            <span>%</span>
+        </div>
+    </div>
+    <div class="platinum">
+        <div class="top">
+            <img src="../../assets/icons/platinum (1).png" alt="gold-bar">
+            <span>2.746.34 ₾</span>
+        </div>
+        <div class="bottom">
+            <span>$</span>
+            <span>&</span>
+            <span>%</span>
+        </div>
+    </div>
+</div>
