--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -17,3 +17,7 @@
       <span class="arrow right">&#8594;</span>
     </button>
   </div>
+
+
+  <!-- link for carousel code -->
+  <!-- https://medium.com/showpad-engineering/angular-animations-lets-create-a-carousel-with-reusable-animations-81c0dd8847e8 -->
