add footer component/ delete unused component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,35 @@
-<p>footer works!</p>
+<div class="top">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+    <img src="../../assets/icons/12.png" alt="brilliant">
+</div>
+<div class="bottom">
+
+</div>
